<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Innocent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_account">账号：</string>
	<string name="tv_password">密码：</string>
	<string name="et_account_hint">请输入账号</string>
	<string name="et_password_hint">请输入密码</string>
	<string name="et_password_again_hint">请再次输入密码</string>
	<string name="btn_login">登  录</string>
	<string name="bottom_vertical_line">|</string>
	<string name="bottom_fetch_password">找回密码</string>
	<string name="bottom_register">注册账号</string>
	<string name="choose_from_album">从相册选取</string>
	<string name="choose_from_camera">从相机选取</string>
	<string name="tv_sex">性别：</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="tv_age">年龄：</string>
	<string name="et_age_hint">请输入年龄</string>
	<string name="btn_submit">提 交</string>
	<string name="friends_group">好友分组</string>
	<string name="life_service">生活服务</string>
	<string name="btn_back_message">消息(0)</string>
	<string name="et_chat_content_hint">输入聊天内容</string>
	<string name="btn_send_message">发送</string>
</resources>
