<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/login_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
  	xmlns:android="http://schemas.android.com/apk/res/android">
   	<!-- account, password and login button -->
  	<LinearLayout 
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_centerInParent="true"
  	    android:orientation="vertical"
  	    android:gravity="center_horizontal">
  	<!-- image header -->
    <ImageView android:id="@+id/image_header" 
    	android:background="@drawable/border_shape" 
        android:layout_width="100dp" 
        android:layout_height="100dp" 
        android:src="@drawable/head_image" 
        android:contentDescription="@null"/>
   
    <EditText 
        android:id="@+id/et_account" 
        android:background="@drawable/border_shape" 
        android:layout_width="250dp" 
        android:layout_height="40dp" 
        android:layout_marginTop="15dp" 
        android:textSize="18sp" 
        android:hint="@string/et_account_hint" 
        android:inputType="number"/>
    <EditText 
        android:id="@+id/et_password" 
        android:background="@drawable/border_shape" 
        android:layout_width="match_parent" 
        android:layout_height="40dp" 
        android:layout_marginTop="-1dp"
 		android:textSize="18sp" 
        android:hint="@string/et_password_hint" 
        android:inputType="textPassword"/>
    <Button 
        android:id="@+id/btn_login" 
        android:background="@drawable/login_btn_shape" 
        android:layout_width="match_parent" 
        android:layout_height="40dp" 
        android:layout_marginTop="15dp" 
        android:textColor="@android:color/white" 
        android:text="@string/btn_login"/>
    <!-- 
     <ImageButton android:id="@+id/indicatorDown" 
        android:background="@drawable/indicator_down" 
        android:layout_width="32.0dip" 
        android:layout_height="32.0dip" 
        android:layout_marginRight="4.0dip" 
        android:layout_marginBottom="5.0dip" 
        android:layout_alignRight="@id/et_account" 
        android:layout_alignBottom="@id/et_account" /> -->
  	</LinearLayout>
  	<!-- base line , fetch password and register account -->
     <TextView android:id="@+id/bottom_base"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" 
        android:textSize="12sp" 
        android:textColor="#ffffffff" 
        android:text="@string/bottom_vertical_line" />
     <TextView android:id="@+id/fetch_password" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true" 
        android:layout_toLeftOf="@id/bottom_base"
        android:layout_marginRight="30dp"
        android:textColor="#ffffffff" 
        android:textSize="12sp"
        android:text="@string/bottom_fetch_password" />
    <TextView android:id="@+id/register" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/bottom_base"
        android:layout_marginLeft="30dp"
        android:textColor="#ffffffff" 
        android:textSize="12sp"  
        android:text="@string/bottom_register" />
</RelativeLayout>
