<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:fadingEdge="none">
        <LinearLayout 
            android:gravity="center_vertical" 
            android:orientation="vertical"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:paddingLeft="10dp" 
            android:paddingRight="10dp" 
            android:paddingTop="20dp" 
            android:paddingBottom="20dp" >
	<!-- header image display for upload -->
            <RelativeLayout android:id="@+id/header_choosen" 
                android:background="@drawable/more_item_press" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" >
                <ImageView android:id="@+id/head_image" 
                    android:layout_width="90dp" 
                    android:layout_height="120dp" 
                    android:layout_marginLeft="40dp" 
                    android:src="@drawable/ic_launcher" 
                    android:scaleType="fitXY" 
                    android:layout_centerVertical="true"
                    android:contentDescription="@null" />
                <LinearLayout 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_toRightOf="@id/head_image"
                    android:orientation="vertical" 
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp" >
						<Button android:id="@+id/album_choose" 
                            android:layout_width="wrap_content" 
                            android:layout_height="40dp" 
                            android:background="@drawable/more_item_press" 
							android:textSize="14sp" 
                            android:text="@string/choose_from_album" />
                        <Button android:id="@+id/camera_choose" 
                            android:layout_width="wrap_content" 
                            android:layout_height="40dp" 
                            android:background="@drawable/more_item_press" 
                            android:layout_marginTop="10dp" 
							android:textSize="14sp" 
                            android:text="@string/choose_from_camera" />
                </LinearLayout>
            </RelativeLayout>
			<!-- fundamental info -->
			<LinearLayout android:id="@+id/member_body_id" 
                android:orientation="vertical" 
                android:background="@drawable/more_item_press" 
                android:layout_width="match_parent" 
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <RelativeLayout android:gravity="center_horizontal" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="5dp" 
                    android:layout_marginTop="15dp">
                    <TextView 
                        android:id="@+id/tv_register_account" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:layout_centerVertical="true" 
                        android:text="@string/tv_account" />
                    <EditText android:textSize="12sp" 
                        android:id="@+id/et_register_account" 
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="5dp" 
                        android:layout_marginRight="5dp" 
                        android:hint="@string/et_account_hint"
                        android:singleLine="true" 
                        android:layout_toRightOf="@id/tv_register_account" 
                        android:layout_centerVertical="true" />
                </RelativeLayout>
                <LinearLayout android:orientation="horizontal" 
                    android:id="@+id/linearLayout_1b" 
                    android:layout_width="match_parent" 
                    android:layout_height="1dp" 
                    android:layout_marginTop="10dp" 
                    android:layout_marginBottom="10dp"
                    android:background="#ffeeeee0" />
                <RelativeLayout android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="5dp" 
                    android:layout_marginTop="5dp" >
                    <TextView 
                        android:id="@+id/tv_register_password" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:text="@string/tv_password" 
                        android:layout_centerVertical="true" />
                    <EditText android:id="@+id/et_register_password" 
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="5dp" 
                        android:layout_marginRight="5dp" 
                        android:hint="@string/et_password_hint" 
						android:textSize="12sp" 
                        android:singleLine="true" 
                        android:layout_toRightOf="@id/tv_register_password" 
                        android:layout_centerVertical="true" 
                        android:inputType="textPassword" />
                </RelativeLayout>
                <LinearLayout android:id="@+id/linearLayout_2b" 
                    android:background="#ffeeeee0" 
                    android:layout_width="match_parent" 
                    android:layout_height="1dp" 
                    android:layout_marginTop="10dp" 
                    android:layout_marginBottom="10dp" 
					android:orientation="horizontal" />
                <RelativeLayout 
					android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="5dp" 
                    android:layout_marginTop="5dp">
                    <TextView android:id="@+id/tv_register_repeat_password" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content"
                        android:text="@string/tv_password" 
                        android:layout_centerVertical="true" />
                    <EditText android:id="@+id/et_regiter_repeat_password" 
						android:textSize="12sp" 
                        android:layout_width="match_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="5dp" 
                        android:layout_marginRight="5dp" 
                        android:hint="@string/et_password_again_hint" 
                        android:singleLine="true" 
                        android:layout_toRightOf="@id/tv_register_repeat_password" 
                        android:layout_centerVertical="true" 
                        android:inputType="textPassword" />
                </RelativeLayout>
                <LinearLayout android:background="#ffeeeee0" 
                    android:layout_width="match_parent" 
                    android:layout_height="1dp" 
                    android:layout_marginTop="10dp" 
                    android:layout_marginBottom="10dp" />
                <RelativeLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content" 
                     android:layout_marginLeft="5dp" 
                     android:layout_marginTop="5dp">
                    <TextView android:id="@+id/tv_male" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/tv_sex" 
                        android:layout_centerVertical="true" />
                    <RadioGroup android:id="@+id/rg" 
                        android:orientation="horizontal" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="15dp" 
                        android:layout_toRightOf="@id/tv_male" 
                        android:layout_centerVertical="true">
                        <RadioButton android:id="@+id/male" 
                            android:layout_width="wrap_content" 
                            android:layout_height="wrap_content" 
                            android:textSize="12sp"
                            android:text="@string/male" />
                        <RadioButton android:id="@+id/female" 
                            android:layout_width="wrap_content" 
                            android:layout_height="wrap_content" 
                            android:textSize="12sp"
                            android:text="@string/female" />
                    </RadioGroup>
                </RelativeLayout>
                <LinearLayout 
                    android:layout_width="match_parent" 
                    android:layout_height="1dp" 
                    android:layout_marginTop="10dp" 
                    android:layout_marginBottom="10dp" 
					android:background="#ffeeeee0" />
                <RelativeLayout 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="5dp" 
                    android:layout_marginTop="5dp" 
                    android:layout_marginBottom="15dp">
                    <TextView android:id="@+id/tv_age" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/tv_age" 
                        android:layout_centerVertical="true" />
                    <EditText android:id="@+id/et_age" 
						android:textSize="12sp" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="1dp" 
                        android:hint="@string/et_age_hint"
                        android:singleLine="true" 
                        android:layout_toRightOf="@id/tv_age" 
                        android:layout_centerVertical="true" 
                        android:inputType="number" />
                </RelativeLayout>
        </LinearLayout>
		<Button android:id="@+id/submit_register_info" 
            android:background="@drawable/more_item_press" 
            android:layout_width="match_parent" 
            android:layout_height="40dp" 
            android:layout_marginLeft="20dp" 
            android:layout_marginTop="20dp" 
            android:layout_marginRight="20dp"
            android:gravity="center" 
            android:text="@string/btn_submit" 
            android:textSize="14sp" />
	</LinearLayout>  
</ScrollView>

