<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<!-- action bar -->
    <LinearLayout android:id="@+id/chat_title"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:background="@drawable/chat_title_layer"
		android:layout_alignParentTop="true">
        <Button android:id="@+id/chat_msg_button"
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="3dp"
			android:background="@drawable/msg_button_back"
			android:textSize="12sp"
			android:textColor="@android:color/white"
			android:text="@string/btn_back_message"
			android:layout_weight="1.9" />
        <TextView android:id="@+id/chat_contact_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:textSize="12sp"
			android:textColor="@android:color/white"
			android:text="龙行天下"
			android:layout_weight="1.0" />
        <ImageButton android:id="@+id/chat_contact_button"
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:layout_marginTop="3dp"
			android:layout_marginRight="8dp"
			android:background="@drawable/chat_contact_back"
			android:layout_weight="2.0" 
			android:contentDescription="@null"/>
    </LinearLayout>
    <!-- bottom: chat_content input and send -->
    <LinearLayout android:id="@+id/chat_bottom_linear"
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:orientation="horizontal"
		android:background="@drawable/chat_title_layer"
		android:baselineAligned="true"
		android:layout_alignParentBottom="true">
        
        <ImageButton android:id="@+id/chat_bottom_look"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.7"
			android:layout_marginLeft="7dp"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:background="@drawable/chat_bottom_look"
			android:contentDescription="@null"/>
        <ImageButton android:id="@+id/chat_bottom_add"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.7"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:background="@drawable/chat_bottom_add"
			android:contentDescription="@null"/>
        <EditText android:id="@+id/send_content"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:layout_marginTop="6dp"
			android:layout_marginBottom="6dp"
			android:hint="@string/et_chat_content_hint"
			android:textSize="16sp"
			android:background="@drawable/et_state_list"/>
        <Button android:id="@+id/send_chat_content"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginRight="7dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:textColor="#ffffffff"
			android:textSize="12sp"
			android:text="@string/btn_send_message"/>
    </LinearLayout>
    <!-- display the chat content -->
    <ListView android:id="@+id/chat_list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#fff0f0f0"
		android:divider="#ffaaaaaa"
		android:dividerHeight="0.0px"
		android:layout_above="@id/chat_bottom_linear"
		android:layout_below="@id/chat_title" />
</RelativeLayout>

<!--  <ImageButton android:id="@+id/chat_bottom_look"
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:layout_weight="1.9"
			android:background="@drawable/chat_bottom_look"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="3.5dp"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp" 
			android:contentDescription="@null"/>
        <ImageButton android:id="@+id/chat_bottom_add"
			android:layout_width="36dp"
			android:layout_height="wrap_content"
			android:layout_weight="1.9"
			android:layout_marginLeft="3.5dip"
			android:layout_marginRight="3.5dip"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:background="@drawable/chat_bottom_add"
			android:contentDescription="@null"/>
        <EditText android:id="@+id/send_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center"
			android:layout_marginLeft="3.5dp"
			android:layout_marginRight="3dp"
			android:hint="@string/et_chat_content_hint"
			android:textSize="12sp"
			android:background="@drawable/et_state_list"
			android:ems="10" />
        <Button android:id="@+id/send_chat_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:layout_marginLeft="3dp"
			android:layout_marginTop="10dp"
			android:layout_marginRight="12dp"
			android:layout_marginBottom="10dp"
			android:background="@drawable/chat_send_button_shape"
			android:textColor="#ffffffff"
			android:textSize="12sp"
			android:text="@string/btn_send_message"/> -->
